<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      android:scrollbars="none"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/padding"
        >

      <Space
          android:id="@+id/space"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/space_height"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/hintText"
          />

      <!--            <ImageView-->
      <!--                android:id="@+id/logo"-->
      <!--                android:layout_width="@dimen/logo_size"-->
      <!--                android:layout_height="@dimen/logo_size"-->
      <!--                android:layout_marginBottom="@dimen/margin_and_a_half"-->
      <!--                android:src="@mipmap/ic_launcher"-->
      <!--                app:layout_constraintBottom_toTopOf="@id/server_url_parent"-->
      <!--                app:layout_constraintEnd_toEndOf="parent"-->
      <!--                app:layout_constraintStart_toStartOf="parent"-->
      <!--                app:layout_constraintTop_toTopOf="parent"-->
      <!--                app:layout_constraintVertical_chainStyle="packed" />-->

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/hintText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_half"
          android:layout_marginTop="@dimen/margin_half"
          android:gravity="center"
          android:text="@string/settings_restart_hint"
          android:textAppearance="@android:style/TextAppearance.Medium"
          android:textColor="@color/hint_color"
          android:visibility="gone"
          app:drawableStartCompat="@drawable/ic_information"
          app:layout_constraintBottom_toTopOf="@id/space"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/refresh_token_parent"
          tools:visibility="visible"
          style="@style/ViewWithPadding"
          />

      <androidx.cardview.widget.CardView
          android:id="@+id/mapCard"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_half"
          android:elevation="4dp"
          app:cardCornerRadius="4dp"
          app:layout_constraintBottom_toTopOf="@id/server_url_parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_chainStyle="packed"
          >

        <com.google.android.libraries.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            />
      </androidx.cardview.widget.CardView>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/refresh_token_parent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toTopOf="@id/hintText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/settings_gateway_id_parent"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/refresh_token_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_refresh_token"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/server_url_parent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_half"
          app:layout_constraintBottom_toTopOf="@id/settings_gateway_id_parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/mapCard"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_server_url"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/settings_gateway_id_parent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_half"
          app:layout_constraintBottom_toTopOf="@id/refresh_token_parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/server_url_parent"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_gateway_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_gateway_id"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/default_gateway_id"
            />
      </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.bottomappbar.BottomAppBar
      android:id="@+id/bottomBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:backgroundTint="?attr/colorBackgroundFloating"
      app:fabAlignmentMode="center"
      app:hideOnScroll="true"
      app:layout_scrollFlags="scroll|snap"
      style="@style/Widget.MaterialComponents.BottomAppBar"
      />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_repeat"
      android:visibility="gone"
      app:layout_anchor="@id/service_button"
      app:layout_anchorGravity="center"
      tools:visibility="visible"
      />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/service_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_play_arrow"
      app:layout_anchor="@id/bottomBar"
      />
</androidx.coordinatorlayout.widget.CoordinatorLayout>


